# syllabledetection

./: .gitignore  CMakeLists.txt  README.md  rename_cnn.py
docs/: DESIGN.md  interspeech_draft.md  syllabledetection.md
examples/: CMakeLists.txt  process_wav.c
experiments/realtime_prominence/: CMakeLists.txt  README.md  build_wasm.bat
experiments/realtime_prominence/config/: default.json
experiments/realtime_prominence/include/: syllable_detector.h
experiments/realtime_prominence/paper/: README.md  interspeech_prominence.tex  visceral_resonance.tex
experiments/realtime_prominence/src/: realtime_sim.c
experiments/realtime_prominence/web_demo/: README.md  index.html  start_server.bat  syllable.js  syllable.wasm
experiments/realtime_prominence/web_demo/css/: style.css
experiments/realtime_prominence/web_demo/js/: demo.js  prominence-detector-wasm.js  prominence-detector.js  syllable.js  syllable.wasm
include/: syllable_detector.h
scripts/: package_dist.ps1
src/: peak_detector.c  syllable_detector.c
src/dsp/: agc.c  agc.h  biquad.c  biquad.h  envelope.c  envelope.h  high_freq_energy.c  high_freq_energy.h  mfcc.c  mfcc.h  simd_utils.h  spectral_flux.c  spectral_flux.h  wavelet.c  wavelet.h  zff.c  zff.h
tests/: CMakeLists.txt  test_basic.c
wrappers/csharp/: SyllableDetector.cs
wrappers/python/: syllable.py
